syntax = "proto3";

option go_package = "./pb";



message UserLoginQuery{
  int64 uid = 1;
  string token = 2;
}

message UserLoginQueryResponse{
  int64 n = 1;
}


